# Aegis

./: docker-compose.yml
aegis-fe/: package-lock.json  package.json
aegis-fe/app/: layout.tsx  page.tsx
aegis-fe/app/transactions/: page.tsx
aegis-fe/components/: MarketCard.tsx  Navbar.tsx  TradeModal.tsx  TransactionItem.tsx
aegis-fe/services/: api.ts
aegis-fe/store/: appStore.ts
aegis-fe/types/: index.ts
market/: .gitignore  Dockerfile  README.md  go.mod  go.sum
market/cmd/: main.go
market/internal/api/: handler.go
market/internal/middleware/: middleware.go
market/internal/repository/: repository.go
market/internal/service/: service.go
market/pkg/config/: config.go
market/pkg/models/: models.go
market/scripts/: reset.sql  seed.sh  seed.sql  setup_db.sh
processor/: CMakeLists.txt  Dependencies.cmake
processor/src/: config.dev.yaml
processor/src/configs/: config.cpp  config.h
processor/src/models/: transaction.h
transaction-service/: .gitignore  CMakeLists.txt  Dockerfile  config.json  main.cc
transaction-service/controllers/: TransactionController.cc  TransactionController.h
transaction-service/models/: Transactions.cc  Transactions.h  model.json
transaction-service/repositories/: TransactionRepository.cc  TransactionRepository.h
transaction-service/services/: TransactionService.cc  TransactionService.h
transaction-service/sql/: create.sql
transaction-service/test/: CMakeLists.txt  test_main.cc
